add the picture as a background

--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -1,6 +1,13 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
         <div class="container-fluid">
+
+            <div>
+
+                <img src="myimage" alt="">
+            
+              </div>
+
             <div class="row">
 
 
