--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
 
 <!-- PAGE CONTAINER for the search and text and button-->
 <div class="page-container">
+  
   <!-- HEADER DESKTOP-->
   <header class="header-desktop">
     <div class="section-content section-content-p30">
@@ -76,7 +77,16 @@
 		</ul>
   </footer>
 
+
+  <!--
   <body>
+
+    <div>
+
+    <img [src]="myimage" alt="">
+
+  </div>
+
     <div class="section">
 
       <div class="video-container">
@@ -88,3 +98,4 @@
 
   </div>
   </body>
+  -->
