add video as a background for the main content part

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,7 +1,16 @@
 <div class="main-content page-m" >
     <div class="section-content section-content-p30">
         <div class="container-fluid">
+            <!--
+            <div class="fullscreen-video-wrap">
             
+            <video autoplay muted loop id="myVideo">
+                <source src="assets/video.mp4" type="video/mp4">
+               
+              
+                </video>
+
+                -->
             <form [formGroup]="checkoutFormGroup" (ngSubmit)="onSubmit()"><!-- checkoutFormGroup is exactly same in checkout.component-->
                 <!--(ngSubmit)="onSubmit()" simply we will call our method we have made in checkout.component when we will click Parchase -->
                 
