--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,12 @@
 <!-- PAGE CONTAINER for the search and text and button-->
 <div class="page-container">
   
+  <video autoplay muted loop id="myVideo">
+                <source src="assets/video.mp4" type="video/mp4">
+               
+              
+                </video>
+
   <!-- HEADER DESKTOP-->
   <header class="header-desktop">
     <div class="section-content section-content-p30">
