--- a/src/app/components/products-details/products-details.component.html
+++ b/src/app/components/products-details/products-details.component.html
@@ -1,6 +1,10 @@
+
 <div class="detail-section">
+
     <div class="container-fluid">
 
+            </div>
+        
         <img src="{{ product.imageUrl }}" class="detail-img">
 
         <h3>{{ product.name }}</h3>
@@ -13,5 +17,15 @@
 
         <a routerLink="/products" class="mt-5">Back to Product List</a>
         <hr>
-    </div>
 </div>
+
+
+<!--
+    <div class="fullscreen-video-wrap">
+            -->
+            <video autoplay muted loop id="myVideo">
+                <source src="assets/video.mp4" type="video/mp4">
+               
+              
+                </video>
+        
