adding video as background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
   </video>
 -->
 <div class="page-wrapper">
+  <div class="content2">
 <!-- MENU SIDEBAR-->
-<aside class="menu-sidebar d-none d-lg-block">
+
   <div class="logo">
     <a routerLink="/products">
       <img src="assets/images/products/logo.png" alt="luv2shop" class="img-responsive">
@@ -15,7 +16,8 @@
   </div>
     
      <app-product-category-menu></app-product-category-menu>
-</aside>
+
+</div>
 </div>
 
 <!-- END MENU SIDEBAR-->
@@ -34,7 +36,7 @@
     <div class="section-content section-content-p30">
       <div class="container-fluid">
         <div class="header-wrap">
-
+          
           
           <app-search></app-search>
           <!--
