--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,8 @@ img{
 }
 
 p{
-    margin:0
+    margin:0;
+    color:white
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -107,7 +108,7 @@ a,a:hover{
 
 .page-wrapper{
     overflow:hidden;
-    background:#924747;
+    /* background:#924747; */
     padding-bottom:8vh
 }
 
@@ -139,10 +140,10 @@ aside.menu-sidebar.d-none.d-lg-block.clr{
  */
 
 .header-desktop{
-    background:#0da8e4;
-    -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
+    /* background:#0da8e4; */
+    /* -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
     -moz-box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
-    box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
+    box-shadow:0 2px 5px 0 rgba(0,0,0,.1); */
     position:fixed;
     top:0;
     right:0;
@@ -1084,12 +1085,21 @@ footer ul li{
   }
   
   video#myVideo {
-    position: fixed; right: 0%; bottom: 0%; left: 0%; top: 0%;
-    background-position: 100%;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    top:0;
+    /* background-position: 100%; */
     min-width: 100%; min-height: 100%;
     width: auto; height: auto;
      z-index: -100;
     background: url(assets/video.mp4) no-repeat;
     background-size: -50%;
     margin: 0 auto;
+   }
+
+   .content2 {
+    position: fixed;
+    bottom: 0;
+
    }
